# TADA

./: .dockerignore  .env.example  .gitignore  .instructions.txt.un~  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  notes.md  pyproject.toml  python_workflow.md  requirements.txt
TADA/: asgi.py  settings.py  urls.py  wsgi.py
base/: admin.py  context.py  context_processors.py  forms.py  models.py  tests.py  urls.py  user_context.py  views.py
base/migrations/: 0001_initial.py  0002_candidate_continue_code.py  0002_candidate_linkedin_url.py  0003_interest_candidateinterest_interest_submissionnote_and_more.py  0003_position_question_position.py  0004_add_created_by_to_position_and_company.py  0005_update_company_position_fields.py  0006_add_application_token.py  0007_remove_candidate_admin_notes_and_more.py  0008_rename_intakesubmission_submission.py  0009_remove_submission_email_and_more.py  0010_submission_finished_at.py  0011_remove_submission_company_submission_position.py  0012_remove_question_base_questi_is_glob_161a53_idx_and_more.py  (+10 more)
candidates/: admin.py  models.py  urls.py  views.py
config/: settings.py  urls.py
sql/: 01_submissions_overview.sql  02_company_submission_counts.sql  03_position_applicant_stats.sql  04_candidate_interest_summary.sql  05_staff_per_company.sql  06_rating_question_averages.sql  07_candidates_without_submissions.sql  08_top_interests_by_company.sql
testapp/: urls.py  views.py
testing/: tc00.sql  tc01.sql  tc02.sql  tc03.sql  tc04.sql  tc05.sql  tc06.sql  tc07.sql  tc08.sql  tc09.sql  tc10.sql
(+68 files in other folders)
