[tool.poetry]
name = "TADA"
version = "1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "6.0.1"
asgiref = "3.11.0"
dj-database-url = "3.1.0"
gunicorn = "25.1.0"
packaging = "26.0"
psycopg2-binary = "2.9.11"
python-decouple = "3.8"
sqlparse = "0.5.5"
tzdata = "2025.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"